--- a/public/thanks.html
+++ b/public/thanks.html
@@ -9,21 +9,21 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
-  <header class="site-header"><div class="wrap bar">
-    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
-    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
-    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  <header class="aw-site-header"><div class="aw-wrap aw-bar">
+    <a href="/" class="aw-brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="aw-nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline aw-theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
   </div></header>
 
-  <main id="main" class="wrap narrow">
-    <div class="card">
+  <main id="main" class="aw-wrap narrow">
+    <div class="aw-card">
       <h1>Dziękujemy za wiadomość</h1>
       <p>Odeślemy odpowiedź tak szybko, jak to możliwe.</p>
-      <div class="links"><a class="btn outline" href="/">Strona główna</a><a class="btn" href="/contact.html">Wyślij kolejną</a></div>
+      <div class="aw-links"><a class="btn outline" href="/">Strona główna</a><a class="btn" href="/contact.html">Wyślij kolejną</a></div>
     </div>
   </main>
 
-  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <footer class="aw-site-footer"><div class="aw-wrap aw-bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
   <script defer src="/theme.js"></script><script defer src="/footer.js"></script>
 </body>
 </html>
