--- a/public/404.html
+++ b/public/404.html
@@ -7,27 +7,27 @@
   <meta property="og:image" content="https://awonsystem.pl/api/og?title=404%20%E2%80%94%20AWON">
   <link rel="stylesheet" href="/uifix.css"><link rel="stylesheet" href="/pages.css">
 </head>
-<body class="page-404">
+<body class="aw-page-404">
   <a href="#main" class="skip-link">Pomiń do treści</a>
-  <header class="site-header"><div class="wrap bar">
-    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
-    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
-    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  <header class="aw-site-header"><div class="aw-wrap aw-bar">
+    <a href="/" class="aw-brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="aw-nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline aw-theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
   </div></header>
 
-  <main id="main" class="wrap">
-    <div class="card">
+  <main id="main" class="aw-wrap">
+    <div class="aw-card">
       <h1>404 — tej strony nie znaleźliśmy</h1>
       <p>Sprawdź adres lub skorzystaj z linków poniżej.</p>
-      <div class="links">
+      <div class="aw-links">
         <a class="btn outline" href="/">← Strona główna</a>
         <a class="btn" href="/contact.html">Kontakt</a>
       </div>
-      <p class="meta mt-14">Jeśli błąd się powtarza, zgłoś nam adres: <code id="path"></code></p>
+      <p class="meta aw-mt-14">Jeśli błąd się powtarza, zgłoś nam adres: <code id="path"></code></p>
     </div>
   </main>
 
-  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <footer class="aw-site-footer"><div class="aw-wrap aw-bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
   <script defer src="/theme.js"></script><script defer src="/footer.js"></script><script defer src="/404.js"></script>
 </body>
 </html>
