--- a/public/health.html
+++ b/public/health.html
@@ -9,26 +9,26 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
-  <header class="site-header"><div class="wrap bar">
-    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
-    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
-    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  <header class="aw-site-header"><div class="aw-wrap aw-bar">
+    <a href="/" class="aw-brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="aw-nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline aw-theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
   </div></header>
 
-  <main id="main" class="wrap">
+  <main id="main" class="aw-wrap">
     <h1>AWON — Health</h1>
-    <div class="box grid">
+    <div class="aw-box aw-grid">
       <div>Hostname: <code id="host"></code></div>
       <div>Czas (UTC): <code id="time"></code></div>
       <div>Tryb (zgadywanie po hostname): <code id="mode"></code></div>
       <div>Start: <a href="/">/</a> • Ikona: <a href="/favicon.svg" target="_blank">/favicon.svg</a></div>
     </div>
-    <div class="box"><h3>/health.json (statyczny)</h3><div id="loc-status">Ładowanie…</div><pre id="loc-json"></pre></div>
-    <div class="box"><h3>API via proxy</h3><div class="meta">/api/health-proxy → https://api.awonsystem.pl/health</div><div id="api-status">Ładowanie…</div><pre id="api-json"></pre></div>
-    <div class="box">Szybkie linki: <a href="/staging.txt" target="_blank">/staging.txt</a> • <a href="/smoke.html" target="_blank">/smoke.html</a> • <a href="/select-test.html" target="_blank">/select-test.html</a></div>
+    <div class="aw-box"><h3>/health.json (statyczny)</h3><div id="loc-status">Ładowanie…</div><pre id="loc-json"></pre></div>
+    <div class="aw-box"><h3>API via proxy</h3><div class="meta">/api/health-proxy → https://api.awonsystem.pl/health</div><div id="api-status">Ładowanie…</div><pre id="api-json"></pre></div>
+    <div class="aw-box">Szybkie linki: <a href="/staging.txt" target="_blank">/staging.txt</a> • <a href="/smoke.html" target="_blank">/smoke.html</a> • <a href="/select-test.html" target="_blank">/select-test.html</a></div>
   </main>
 
-  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <footer class="aw-site-footer"><div class="aw-wrap aw-bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
   <script defer src="/theme.js"></script><script defer src="/footer.js"></script><script defer src="/health.js"></script>
 </body>
 </html>
