--- a/public/version.html
+++ b/public/version.html
@@ -9,15 +9,15 @@
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
-  <header class="site-header"><div class="wrap bar">
-    <a href="/" class="brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
-    <nav class="nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
-    <button id="theme-toggle" class="btn outline theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
+  <header class="aw-site-header"><div class="aw-wrap aw-bar">
+    <a href="/" class="aw-brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
+    <nav class="aw-nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
+    <button id="theme-toggle" class="btn outline aw-theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
   </div></header>
 
-  <main id="main" class="wrap">
+  <main id="main" class="aw-wrap">
     <h1>AWON — Wersja wdrożenia</h1>
-    <div class="box grid">
+    <div class="aw-box aw-grid">
       <div>Środowisko: <code id="env"></code></div>
       <div>Czas (UTC): <code id="time"></code></div>
       <div>Commit: <code id="commit"></code></div>
@@ -25,11 +25,11 @@
       <div>Repo: <code id="repo"></code></div>
       <div>Adres wdrożenia: <code id="url"></code></div>
     </div>
-    <div class="box"><div>Pełny JSON:</div><pre id="json"></pre></div>
+    <div class="aw-box"><div>Pełny JSON:</div><pre id="json"></pre></div>
     <p><a class="btn outline" href="/">← Strona główna</a></p>
   </main>
 
-  <footer class="site-footer"><div class="wrap bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
+  <footer class="aw-site-footer"><div class="aw-wrap aw-bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
   <script defer src="/theme.js"></script><script defer src="/footer.js"></script><script defer src="/version.js"></script>
 </body>
 </html>
