--- a/public/contact.html
+++ b/public/contact.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Kontakt — AWON</title>
   <link rel="manifest" href="/manifest.webmanifest"><meta name="theme-color" content="#0f172a">
-  <meta property="og:image" content="https://awonsystem.pl/api/og?title=Kontakt%20%E2%80%94%20AWON">
-  <link rel="stylesheet" href="/uifix.css"><link rel="stylesheet" href="/pages.css">
+  <script>try{var s=localStorage.getItem('theme');if(s==='dark'||(!s&&matchMedia('(prefers-color-scheme: dark)').matches))document.documentElement.classList.add('dark')}catch(e){}</script>
+  <link rel="stylesheet" href="/uifix.css?v=3"><link rel="stylesheet" href="/pages.css?v=3">
 </head>
 <body>
   <a href="#main" class="skip-link">Pomiń do treści</a>
@@ -18,8 +18,8 @@
   </header>
 
   <main id="main" class="aw-wrap narrow">
-    <h1>Kontakt</h1>
-    <div class="aw-box">
+    <div class="aw-card">
+      <h1>Kontakt</h1>
       <form method="post" action="/api/contact?redirect=/thanks.html" class="aw-form">
         <div class="aw-row"><label>Imię i nazwisko <input name="name" required minlength="2" maxlength="100" autocomplete="name"></label></div>
         <div class="aw-row"><label>E-mail <input type="email" name="email" required maxlength="160" autocomplete="email"></label></div>
