--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <link rel="manifest" href="/manifest.webmanifest">
     <meta name="theme-color" content="#0f172a">
+  <script>try{var s=localStorage.getItem("theme");if(s==="dark"||(!s&&matchMedia("(prefers-color-scheme: dark)").matches))document.documentElement.classList.add("dark")}catch(e){}</script>
 
     <link rel="canonical" href="https://awonsystem.pl/">
     <meta property="og:title" content="AWON — system zarządzania wynajmem" />
@@ -30,7 +31,8 @@
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
     <link rel="stylesheet" href="/pages.css" />
-  </head>
+    <link rel="stylesheet" href="/force-dark.css?v=1">
+</head>
   <body>
     <a href="#main" class="skip-link">Pomiń do treści</a>
 
