--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
     <link rel="stylesheet" href="/pages.css" />
-    <link rel="stylesheet" href="/force-dark.css?v=1">
+    <link rel="stylesheet" href="/force-dark.css?v=2">
+  <script defer src="/theme-lock.js"></script>
 </head>
   <body>
     <a href="#main" class="skip-link">Pomiń do treści</a>
