ui(login): selektor .route-login + twarde nadpisanie bg-gray-50/text-gray-800 (ciemny motyw na 100%)

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
     <link rel="stylesheet" href="/pages.css" />
-    <link rel="stylesheet" href="/force-dark.css?v=3">
+    <link rel="stylesheet" href="/force-dark.css?v=4">
   <script defer src="/theme-lock.js"></script>
+  <script defer src="/route-flag.js"></script>
 </head>
   <body>
     <a href="#main" class="skip-link">Pomiń do treści</a>
