ui(login): twarde nadpisania Tailwinda (bg-gray-50/text-gray-800) + usunięcie inline script (CSP) + cache-bust

--- a/index.html
+++ b/index.html
@@ -11,11 +11,9 @@
     <meta name="x-log" content="%VITE_LOG_PAGEVIEWS%">
     <meta name="x-log-errors" content="%VITE_LOG_ERRORS%">
 
-    <link rel="manifest" href="/manifest.webmanifest">
+    <link rel="manifest" href="/manifest.webmanifest?v=2">
     <meta name="theme-color" content="#0f172a">
-  <script>try{var s=localStorage.getItem("theme");if(s==="dark"||(!s&&matchMedia("(prefers-color-scheme: dark)").matches))document.documentElement.classList.add("dark")}catch(e){}</script>
-
-    <link rel="canonical" href="https://awonsystem.pl/">
+  <link rel="canonical" href="https://awonsystem.pl/">
     <meta property="og:title" content="AWON — system zarządzania wynajmem" />
     <meta property="og:description" content="Prostsza obsługa rezerwacji i operacji w obiektach noclegowych." />
     <meta property="og:type" content="website" />
@@ -31,7 +29,7 @@
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
     <link rel="stylesheet" href="/pages.css" />
-    <link rel="stylesheet" href="/force-dark.css?v=4">
+    <link rel="stylesheet" href="/force-dark.css?v=5">
   <script defer src="/theme-lock.js"></script>
   <script defer src="/route-flag.js"></script>
 </head>
