--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
     <link rel="preload" href="/uifix.css" as="style">
     <link rel="stylesheet" href="/uifix.css" />
     <link rel="stylesheet" href="/pages.css" />
-    <link rel="stylesheet" href="/force-dark.css?v=5">
+    <link rel="stylesheet" href="/force-dark.css?v=6">
   <script defer src="/theme-lock.js"></script>
-  <script defer src="/route-flag.js"></script>
+  <script defer src="/route-flag.js?v=2"></script>
 </head>
   <body>
     <a href="#main" class="skip-link">Pomiń do treści</a>
