--- a/public/contact.html
+++ b/public/contact.html
@@ -1,36 +1,70 @@
 <!doctype html>
-<html lang="pl">
-<head>
-  <meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Kontakt — AWON</title>
-  <link rel="manifest" href="/manifest.webmanifest"><meta name="theme-color" content="#0f172a">
-  <script>try{var s=localStorage.getItem('theme');if(s==='dark'||(!s&&matchMedia('(prefers-color-scheme: dark)').matches))document.documentElement.classList.add('dark')}catch(e){}</script>
-  <link rel="stylesheet" href="/uifix.css?v=3"><link rel="stylesheet" href="/pages.css?v=3">
-</head>
-<body>
-  <a href="#main" class="skip-link">Pomiń do treści</a>
-  <header class="aw-site-header">
-    <div class="aw-wrap aw-bar">
-      <a href="/" class="aw-brand"><img src="/logo/awon-mark.svg" alt="" width="28" height="28"> AWON</a>
-      <nav class="aw-nav"><a href="/">Start</a><a href="/contact.html">Kontakt</a></nav>
-      <button id="theme-toggle" class="btn outline aw-theme-toggle" aria-label="Przełącz motyw"><span id="theme-label">Ciemny</span></button>
-    </div>
-  </header>
+<html lang="pl" class="dark">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Kontakt — AWON</title>
 
-  <main id="main" class="aw-wrap narrow">
-    <div class="aw-card">
-      <h1>Kontakt</h1>
-      <form method="post" action="/api/contact?redirect=/thanks.html" class="aw-form">
-        <div class="aw-row"><label>Imię i nazwisko <input name="name" required minlength="2" maxlength="100" autocomplete="name"></label></div>
-        <div class="aw-row"><label>E-mail <input type="email" name="email" required maxlength="160" autocomplete="email"></label></div>
-        <div class="aw-row"><label>Wiadomość <textarea name="message" required minlength="10" maxlength="2000" rows="6"></textarea></label></div>
-        <div style="position:absolute;left:-10000px;width:1px;height:1px;overflow:hidden;"><label>Strona (zostaw puste)<input name="website" autocomplete="off"></label></div>
-        <button type="submit">Wyślij</button>
-      </form>
-    </div>
-  </main>
+    <meta name="theme-color" content="#0b1220" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <footer class="aw-site-footer"><div class="aw-wrap aw-bar"><div>© <span id="year"></span> AWON</div><div class="meta">awonsystem.pl</div></div></footer>
-  <script defer src="/theme.js"></script><script defer src="/footer.js"></script>
-</body>
+    <script defer src="/theme-lock.js"></script>
+    <script defer src="/route-flag.js"></script>
+
+    <link rel="stylesheet" href="/uifix.css" />
+    <link rel="stylesheet" href="/pages.css" />
+    <link rel="stylesheet" href="/force-dark.css" />
+  </head>
+  <body>
+    <header class="aw-wrap aw-bar">
+      <a class="aw-logo" href="/">
+        <img src="/logo/awon-mark.svg" alt="" width="24" height="24" />
+        <span>AWON</span>
+      </a>
+      <nav class="aw-nav">
+        <a href="/contact.html" aria-current="page">Kontakt</a>
+      </nav>
+    </header>
+
+    <main class="aw-main">
+      <section class="aw-hero">
+        <h1>Kontakt</h1>
+        <p class="aw-hero-sub">
+          Skontaktuj się z nami w sprawie systemu AWON.
+        </p>
+      </section>
+
+      <section class="aw-wrap">
+        <div class="aw-card aw-card-md">
+          <form class="aw-form" action="/api/contact" method="post">
+            <div class="form-group">
+              <label>Imię i nazwisko</label>
+              <input type="text" name="name" placeholder="np. Jan Kowalski" required />
+            </div>
+            <div class="form-group">
+              <label>E-mail</label>
+              <input type="email" name="email" placeholder="np. jan.kowalski@example.com" required />
+            </div>
+            <div class="form-group">
+              <label>Wiadomość</label>
+              <textarea name="message" rows="5" placeholder="Opisz krótko sprawę…" required></textarea>
+            </div>
+
+            <div class="form-actions">
+              <button type="submit" class="btn-primary">Wyślij</button>
+            </div>
+          </form>
+        </div>
+      </section>
+    </main>
+
+    <footer class="aw-wrap aw-bar aw-foot">
+      <div class="aw-foot-brand">
+        <img src="/logo/awon-mark.svg" width="16" height="16" alt="" />
+        <span>AWON</span>
+      </div>
+      <div class="aw-foot-right">awonsystem.pl</div>
+    </footer>
+  </body>
 </html>
